uploads: fix long filenames not word-wrapping.
Fix a bug where, when uploading a file from disk, if the filename was
too long, it wouldn't get word-wrapped and could break out of the
containing element.

--- a/app/javascript/src/styles/common/utilities.scss
+++ b/app/javascript/src/styles/common/utilities.scss
@@ -33,6 +33,7 @@ $spacer: 0.25rem; /* 4px */
   white-space: nowrap;
 }
 
+.break-all { word-break: break-all; }
 .whitespace-nowrap { white-space: nowrap; }
 
 .leading-none { line-height: 1; }
